2011-08-14 Borut Razem <borut.razem AT gmail.com>

	* packages/build.dos2unix/*: added
	* etc/dcf_list: added derna DFC build machine
	* bin/dcf.sh: bandwith limit increase from 7 to KiB/s
	* crontab.txt: mirror-doors buld starts at 01:00; all entries commented
	* packages/build.popt/Makefile, packages/build.scons/Makefile,
	  packages/build.libtool/Makefile, packages/build.nsis/Makefile:
	  misc. cosmetic changes
	* packages/build.gettext/*: added
	* .sdcc_builder/profile: serach for local unix2dos

2011-07-31 Borut Razem <borut.razem AT gmail.com>

	* packages/build.boost/Makefile: failed attempt to make universal
	  boost build
	* packages/build.gputils/Makefile: fixed non svn build

2011-07-18 Borut Razem <borut.razem AT gmail.com>

	* bin/dcf.sh: use relative path as argument for rsync --exclude

2011-07-17 Borut Razem <borut.razem AT gmail.com>

	* bin/dcf.sh: added debug_exec() function
	* packages/build.readline: updated readline to version 6.2

2011-07-15 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gputils/Makefile: build gputils from svn HEAD
	* packages/build.stx-btree/Makefile: updated stx-btree to version 0.8.6
	* packages/build.mingw32/Makefile: updated to gcc 4.6.1
	* packages/build.boost/Makefile: updated to boost 1_47_0

2011-06-12 Borut Razem <borut.razem AT gmail.com>

	* crontab.txt: redirect curl stderr to /dev/null

2011-05-22 Borut Razem <borut.razem AT gmail.com>

	* crontab.txt: added the regression tests database update

2011-05-02 Borut Razem <borut.razem AT gmail.com>

	* packages/build.stx-btree/*: added stx-btree package

2011-04-24 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile: use `` instead of $()

2011-04-23 Borut Razem <borut.razem AT gmail.com>

	* packages/build.rsync/Makefile: resync version 3.0.8
	* .sdcc_builder/profile: added /opt/solstudio12.2/bin to path

2011-04-11 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gcc/Makefile, packages/build.gmp_mpfr/Makefile: