@@ -6,9 +6,10 @@
 	* crontab.txt: mirror-doors buld starts at 01:00; all entries commented
 	* packages/build.popt/Makefile, packages/build.scons/Makefile,
 	  packages/build.libtool/Makefile, packages/build.nsis/Makefile:
-	  misc. cosmetic changes
+	  miscellaneous cosmetic changes
 	* packages/build.gettext/*: added
 	* .sdcc_builder/profile: serach for local unix2dos
+	* packages/build.wine/*: added
 
 2011-07-31 Borut Razem <borut.razem AT gmail.com>
 
